--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,22 @@ dependencies:
   intl: ^0.18.0
   file_picker: ^5.2.4
   mask_text_input_formatter: ^2.0.0
-
+  fluttertoast: ^8.1.1
+  provider: ^6.1.2
+  geolocator: ^9.0.1
+  qr_code_scanner: ^1.0.1
+  location: ^5.0.0
+  flutter_local_notifications: ^12.0.0
+  flutter_osm_plugin: ^0.70.1
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.1
+  printing: ^5.11.0
+  google_fonts: ^4.0.4
+  pdf_image_renderer: ^0.7.0
+  universal_io: ^2.0.4
+  path_provider: ^2.0.11
+  url_launcher: ^6.1.7
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,7 +71,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets: 
+     - assets/imag/
+     - assets/imag/fundo_certificado.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
