--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   universal_io: ^2.0.4
   path_provider: ^2.0.11
   url_launcher: ^6.1.7
+  cpf_cnpj_validator: ^2.0.0
   
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,7 @@ flutter:
   uses-material-design: true
   assets: 
      - assets/imag/
+     - assets/imag/fundo_certificado.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
